<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/RelativeLayout01"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.mariam.andriodui_cs496.MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity1"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="58dp"
        android:layout_marginTop="68dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="8pt"
        android:textColor="@color/colorButtonText"
        android:typeface="monospace"
        android:backgroundTint="@color/colorAccent"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity2"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="152dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:textSize="8pt"
        android:textColor="@color/colorButtonText"
        android:typeface="monospace"
        android:backgroundTint="@color/colorAccent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity3"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="257dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textSize="8pt"
        android:textColor="@color/colorButtonText"
        android:typeface="monospace"
        android:backgroundTint="@color/colorAccent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/activity4"
        tools:layout_editor_absoluteY="354dp"
        tools:layout_editor_absoluteX="109dp"
        android:layout_below="@+id/button3"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="8pt"
        android:textColor="@color/colorButtonText"
        android:typeface="monospace"
        android:backgroundTint="@color/colorAccent" />

</RelativeLayout>
